--- a/irc/irc.fsproj
+++ b/irc/irc.fsproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Module1.fs" />
     <None Include="Script.fsx" />
+    <Compile Include="MessageRecievedEventArgs.fs" />
     <Compile Include="IrcServer.fsi" />
     <Compile Include="IrcServer.fs" />
   </ItemGroup>
