--- a/irc/irc.fsproj
+++ b/irc/irc.fsproj
@@ -39,11 +39,14 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums.fs" />
     <Compile Include="Module1.fs" />
     <None Include="Script.fsx" />
     <Compile Include="MessageRecievedEventArgs.fs" />
-    <Compile Include="IrcServer.fsi" />
+    <Compile Include="Commands.fs" />
     <Compile Include="IrcServer.fs" />
+    <Compile Include="CommandResult.fs" />
+    <Compile Include="IrcClient.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
